--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="social-links">
           <!-- SNSリンク - href属性を自分のプロフィールURLに変更してください -->
           <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-          <a href="#" class="social-icon"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Keisuke-MARs" class="social-icon"><i class="fab fa-github"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
           <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
         </div>
